crates/cribo/tests/snapshots/test_bundling_snapshots__execution_results@init_reexports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Success,
    stdout: "Helped: Formatted: {'name': 'test', 'value': 42, 'processed': True}",
    stderr: "",
}
