crates/cribo/tests/snapshots/test_bundling_snapshots__execution_results@simple_math.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Success,
    stdout: "Addition: 8\nMultiplication: 28",
    stderr: "",
}
