crates/cribo/tests/snapshots/test_bundling_snapshots__execution_results@stickytape_explicit_relative_import_in_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
