crates/cribo/tests/snapshots/test_bundling_snapshots__execution_results@stickytape_module_with_triple_quotes.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Success,
    stdout: "Hello\n'''\n\"\"\"",
    stderr: "",
}
