crates/cribo/tests/snapshots/test_bundling_snapshots__execution_results@stickytape_script_using_stdlib_module_in_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Success,
    stdout: "xml.etree.ElementTree\nHello",
    stderr: "",
}
